--- a/html5/package.json
+++ b/html5/package.json
@@ -9,13 +9,15 @@
         "sapui5"
     ],
     "main": "webapp/index.html",
-    "dependencies": {},
+    "dependencies": {
+        "@sap/ux-ui5-fe-mockserver-middleware": "^1.6.5"
+    },
     "devDependencies": {
-        "@ui5/cli": "^2.14.1",
-        "@sap/ux-ui5-tooling": "1",
         "@sap/ui5-builder-webide-extension": "^1.1.8",
-        "ui5-task-zipper": "^0.5.0",
-        "mbt": "^1.2.18"
+        "@sap/ux-ui5-tooling": "1",
+        "@ui5/cli": "^2.14.1",
+        "mbt": "^1.2.18",
+        "ui5-task-zipper": "^0.5.0"
     },
     "scripts": {
         "start": "fiori run --open \"test/flpSandbox.html?sap-ui-xx-viewCache=false#gq4devhtml5-display\"",
@@ -34,7 +36,8 @@
             "@sap/ux-ui5-tooling",
             "@sap/ui5-builder-webide-extension",
             "ui5-task-zipper",
-            "mbt"
+            "mbt",
+            "@sap/ux-ui5-fe-mockserver-middleware"
         ]
     },
     "sapuxLayer": "CUSTOMER_BASE"
