--- a/html5/ui5.yaml
+++ b/html5/ui5.yaml
@@ -15,6 +15,11 @@ server:
             - /resources
             - /test-resources
           url: https://ui5.sap.com
+        backend:
+          - path: /sap
+            url: http://erp13.sap4practice.com:9037
+            client: '001'
+            destination: logaligroupERP
     - name: fiori-tools-appreload
       afterMiddleware: compression
       configuration:
