--- a/html5/webapp/manifest.json
+++ b/html5/webapp/manifest.json
@@ -14,6 +14,17 @@
       "id": "@sap/generator-fiori:basic",
       "version": "1.9.0",
       "toolsId": "8548b73d-e164-4c51-a82f-a16cf3821a8f"
+    },
+    "dataSources": {
+      "mainService": {
+        "uri": "/sap/opu/odata/sap/ZEMPLOYEES_SRV/",
+        "type": "OData",
+        "settings": {
+          "annotations": [],
+          "localUri": "localService/metadata.xml",
+          "odataVersion": "2.0"
+        }
+      }
     }
   },
   "sap.ui": {
@@ -57,6 +68,11 @@
         "settings": {
           "bundleName": "gq4dev.html5.i18n.i18n"
         }
+      },
+      "employeeModel": {
+        "dataSource": "mainService",
+        "preload": true,
+        "settings": {}
       }
     },
     "resources": {
@@ -83,6 +99,27 @@
           "target": [
             "TargetMainView"
           ]
+        },
+        {
+          "name": "RouteEmployeeWizard",
+          "pattern": "employee",
+          "target": [
+            "TargetEmployee"
+          ]
+        },
+        {
+          "name": "RouteEmployeeReview",
+          "pattern": "review",
+          "target": [
+            "TargetEmployeeReview"
+          ]
+        },
+        {
+          "name": "RouteEmployeesView",
+          "pattern": "view",
+          "target": [
+            "TargetEmployeesView"
+          ]
         }
       ],
       "targets": {
@@ -92,6 +129,21 @@
           "clearControlAggregation": false,
           "viewId": "MainView",
           "viewName": "MainView"
+        },
+        "TargetEmployee": {
+          "viewType": "XML",
+          "viewId": "EmployeeWizard",
+          "viewName": "EmployeeWizard"
+        },
+        "TargetEmployeeReview": {
+          "viewType": "XML",
+          "viewId": "ReviewEmployee",
+          "viewName": "ReviewEmployee"
+        },
+        "TargetEmployeesView": {
+          "viewType": "XML",
+          "viewId": "EmployeesView",
+          "viewName": "EmployeesView"
         }
       }
     },
